# pebble-firmware

./: .gitignore  .gitmodules  README.md  pc-nrfconnect-programmer-1.4.7.tgz  pebble-udev_1.0.1-all.deb
.github/workflows/: codeql-analysis.yml
.west/: config
bootloader/mcuboot/: root-ec-p256.pem
bootloader/mcuboot/boot/zephyr/: CMakeLists.txt  Kconfig  iotex_adc.c  main.c  oled.c  prj.conf  serial_adapter.c
bootloader/mcuboot/ptest/: Cargo.toml
iotex_pebble_hw30/: Kconfig.defconfig  adp5360_init.c  iotex_pebble_hw30.dts  iotex_pebble_hw30.yaml  iotex_pebble_hw30_common-pinctrl.dtsi  iotex_pebble_hw30_common.dts  iotex_pebble_hw30_defconfig  iotex_pebble_hw30ns.dts  iotex_pebble_hw30ns.yaml  iotex_pebble_hw30ns_defconfig
modules/alexa-embedded/AlexaGadgetsProtobuf/examples/: compile_nanos.bat
modules/crypto/tinycrypt/: CMakeLists.txt  README.zephyr
modules/debug/mipi-sys-t/: CMakeLists.txt
modules/debug/segger/systemview/: SEGGER_SYSVIEW_Conf.h
modules/fs/fatfs/include/: ffconf.h
modules/fs/fatfs/option/: syscall.c
modules/lib/canopennode/example/: application.c  application.h
modules/lib/loramac-node/: readme.md
modules/lib/tinycbor/src/: cborencoder.c  cborparser.c  cborpretty.c  cborpretty_stdio.c  cbortojson.c  cborvalidation.c  open_memstream.c
modules/lib/tinycbor/zephyr/: CMakeLists.txt  module.yml
nrf/applications/asset_tracker/: CMakeLists.txt  Kconfig  prj_iotex_pebble_hw20ns.conf  prj_thingy91_nrf9160ns.conf  spm.conf
nrf/applications/asset_tracker/configuration/iotex_pebble_hw20ns/: pm_static.yml
nrf/applications/asset_tracker/src/: certificates.h  main.c
nrf/applications/asset_tracker/src/antenna_sdk/src/: CMakeLists.txt  abi_pack.c  abi_pack.h  abi_read_contract.c  abi_read_contract.h  config.c  config.h  debug.h  endian_conv.c  endian_conv.h  iotex-io.pem  iotex_emb.c  iotex_emb.h  jsmn.h  parse.c  parse.h  pb_pack.c  pb_pack.h  pb_proto.c  pb_proto.h  readme.md  request.c  request.h  response.c  response.h  rule.c  rule.h  signer.c  signer.h  tmp.txt  u128.c  u128.h  utils.c  utils.h  www-yahoo-com-chain.pem
nrf/applications/asset_tracker/src/antenna_sdk/src/crypto/: CMakeLists.txt  bignum.c  bignum.h  ecdsa.c  ecdsa.h  hmac_drbg.c  hmac_drbg.h  memzero.c  memzero.h  rand.c  rfc6979.c  secp256k1.c  sha2.c  sha2.h  sha3.c  sha3.h
nrf/applications/asset_tracker/src/bme/: bme680.c  bme680_defs.h  bme680_helper.c  bme680_helper.h
nrf/applications/asset_tracker/src/gps_controller/: gps_controller.c  gps_controller.h
nrf/applications/asset_tracker/src/hal/: hal_adc.c  hal_adc.h  hal_gpio.c  hal_gpio.h
nrf/applications/asset_tracker/src/icm/: Icm426xxDefs.h  Icm426xxDriverInternal.c  Icm426xxDriver_HL.c  Icm426xxDriver_HL.h  Icm426xxDriver_HL_apex.c  Icm426xxDriver_HL_apex.h  Icm426xxSelfTest.c  Icm426xxSelfTest.h  Icm426xxTransport.c  Icm426xxTransport.h  icm42605_helper.c  icm42605_helper.h  icm426xxActionDetect.c  icm426xxActionDetect.h  smdConfig.c  tiltConfig.c  womConfig.c
nrf/applications/asset_tracker/src/light_sensor/: CMakeLists.txt  tsl2572.c  tsl2572.h
nrf/applications/asset_tracker/src/modem/: modem_helper.c  modem_helper.h
nrf/applications/asset_tracker/src/mqtt/: Kconfig  config.c  config.h  mqtt.c  mqtt.h  payload.c
nrf/applications/asset_tracker/src/nvs/: local_storage.c  local_storage.h
nrf/applications/asset_tracker/src/orientation_detector/: orientation_detector.c  orientation_detector.h
nrf/applications/asset_tracker/src/ota/: Kconfig  http_update.c
nrf/applications/asset_tracker/src/sign/: ecdsa.c  ecdsa.h
nrf/applications/asset_tracker/src/ui/: Kconfig  led_pwm.c
nrf/applications/asset_tracker/src/ui/include/: ui.h
nrf/applications/asset_tracker/src/unittest/: Kconfig  mqtt_unittest.c  nanopb_unittest.c  nanopb_unittest.pb.c  nvs_unittest.c  unittest.c  unittest.h
nrf/boards/arm/iotex_pebble_hw20/: Kconfig.defconfig  iotex_pebble_hw20.dts  iotex_pebble_hw20_common-dts-hw1.0  iotex_pebble_hw20_common.dts  iotex_pebble_hw20ns.dts  (+1 more)
nrf/lib/date_time/: date_time.c
nrf/samples/bootloader/: prj.conf
nrf/samples/spm/: CMakeLists.txt  prj.conf
nrf/scripts/: requirements-ci.txt
nrf/subsys/debug/: Kconfig
nrf/subsys/spm/: secure_services.c
nrf/tests/unity/: Kconfig
nrfxlib/nrf_security/configs/: nrf-config.h.template
tools/ci-tools/: requirements.txt
(+130 files in other folders)
